force-app/main/default/objects/Timesheet_Approval__c/Timesheet_Approval__c.object-meta.xml
<CustomObject>
    <label>Timesheet Approval</label>
    <nameField>
        <displayFormat>TSA-{0000}</displayFormat>
        <label>Timesheet Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>