force-app/main/default/objects/Timesheet_Approval__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <label>comments</label>
    <type>TextArea</type>
</CustomField>