force-app/main/default/objects/Timesheet_Approval__c/fields/TimeSheet__c.field-meta.xml
<CustomField>
    <fullName>TimeSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeSheet</label>
    <referenceTo>TimeSheet__c</referenceTo>
    <relationshipLabel>Timesheet Approvals</relationshipLabel>
    <relationshipName>Timesheet_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>